# cargo-dokita

./: .cargo-dokita.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: code_checks.rs  config.rs  crates_io_api.rs  dependency_analysis.rs  diagnostics.rs  lib.rs  manifest.rs
tests/: integration_test.rs  test_helpers.rs
