[package]
name = "cargo-dokita"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.20.0"
clap = { version = "4.5.38", features = ["cargo"] }
reqwest = { version = "0.12.18", features = ["json", "blocking"] }
scopeguard = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"
