[package]
name = "cargo-dokita"
version = "0.1.0"
authors = ["Joshua Uzoagulu <uzoagulujoshua@yahoo.com"]
edition = "2024"
license = "MIT"
description = "A Cargo subcommand to analyze Rust project health, best practices, and common pitfalls."
readme = "README.md"
repository = "https://github.com/Sally-Builds/cargo-dokita.git"
keywords = ["health", "dokita", "cargo-dokita", "rust lint", "diagnostics"]
homepage = "https://github.com/Sally-Builds/cargo-dokita.git"
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]

[dependencies]
cargo_metadata = "0.20.0"
clap = { version = "4.5.38", features = ["cargo"] }
once_cell = "1.21.3"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.18", features = ["json", "blocking"] }
scopeguard = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
termcolor = "1.4.1"
tokio-test = "0.4.4"
toml = "0.8.22"
walkdir = "2.5.0"


[dev-dependencies]
mockito = "1.0"
httpmock = "0.7"